// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Nav should display active link when route matches 1`] = `
.c0 {
  margin: 0;
  display: block;
}

.c1 {
  padding: 1em 1.5em;
  display: inline-block;
  cursor: pointer;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4A4A4A;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
  text-decoration: none;
  border-color: rgba(5,108,153,0);
  border-style: solid;
  border-width: 0 0 2px;
}

.c1:hover {
  color: #056C99;
}

.c1.selected {
  color: #056C99;
  border-color: rgba(5,108,153,1);
}

<NavWithoutRouter
  match={
    Object {
      "params": Object {
        "sectionId": "888",
      },
      "path": "",
      "url": "",
    }
  }
  questionnaire={
    Object {
      "id": "1",
      "sections": Array [
        Object {
          "id": "2",
          "pages": Array [
            Object {
              "id": "3",
            },
          ],
          "title": "Section 1",
        },
      ],
      "title": "Questionnaire",
    }
  }
>
  <Nav__StyledNav>
    <nav
      className="c0"
    >
      <Nav__StyledNavLink
        activeClassName="selected"
        isActive={[Function]}
        to="/questionnaire/1/design/2/3"
      >
        <NavLink
          activeClassName="selected"
          ariaCurrent="true"
          className="c1"
          isActive={[Function]}
          to="/questionnaire/1/design/2/3"
        >
          <Route
            exact={undefined}
            location={undefined}
            path="/questionnaire/1/design/2/3"
            strict={undefined}
          >
            <Link
              aria-current="true"
              className="c1 selected"
              replace={false}
              style={Object {}}
              to="/questionnaire/1/design/2/3"
            >
              <a
                aria-current="true"
                className="c1 selected"
                href="/questionnaire/1/design/2/3"
                onClick={[Function]}
                style={Object {}}
              >
                Builder
              </a>
            </Link>
          </Route>
        </NavLink>
      </Nav__StyledNavLink>
    </nav>
  </Nav__StyledNav>
</NavWithoutRouter>
`;

exports[`components/Nav should render Nav 1`] = `
.c0 {
  margin: 0;
  display: block;
}

.c1 {
  padding: 1em 1.5em;
  display: inline-block;
  cursor: pointer;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4A4A4A;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
  text-decoration: none;
  border-color: rgba(5,108,153,0);
  border-style: solid;
  border-width: 0 0 2px;
}

.c1:hover {
  color: #056C99;
}

.c1.selected {
  color: #056C99;
  border-color: rgba(5,108,153,1);
}

<NavWithoutRouter
  match={
    Object {
      "params": Object {},
      "path": "",
      "url": "",
    }
  }
  questionnaire={
    Object {
      "id": "1",
      "sections": Array [
        Object {
          "id": "2",
          "pages": Array [
            Object {
              "id": "3",
            },
          ],
          "title": "Section 1",
        },
      ],
      "title": "Questionnaire",
    }
  }
>
  <Nav__StyledNav>
    <nav
      className="c0"
    >
      <Nav__StyledNavLink
        activeClassName="selected"
        isActive={[Function]}
        to="/questionnaire/1/design/2/3"
      >
        <NavLink
          activeClassName="selected"
          ariaCurrent="true"
          className="c1"
          isActive={[Function]}
          to="/questionnaire/1/design/2/3"
        >
          <Route
            exact={undefined}
            location={undefined}
            path="/questionnaire/1/design/2/3"
            strict={undefined}
          >
            <Link
              aria-current={false}
              className="c1"
              replace={false}
              style={undefined}
              to="/questionnaire/1/design/2/3"
            >
              <a
                aria-current={false}
                className="c1"
                href="/questionnaire/1/design/2/3"
                onClick={[Function]}
                style={undefined}
              >
                Builder
              </a>
            </Link>
          </Route>
        </NavLink>
      </Nav__StyledNavLink>
    </nav>
  </Nav__StyledNav>
</NavWithoutRouter>
`;
